--- a/sass/components/_mobilemenu.scss
+++ b/sass/components/_mobilemenu.scss
@@ -4,9 +4,10 @@
   left: 0;
   padding: 48px 40px;
   // width: 480px;
-
+  overflow: hidden;
   transform: translateX(100%);
   background-color: var(--white-color);
+  transition: transform 250ms var(--timing-function);
   @media screen and (min-width: 481px) {
     display: none;
   }
