--- a/css/main.css
+++ b/css/main.css
@@ -644,8 +644,6 @@ header {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background-color: var(--white-color);
-  max-width: 450px;
-  min-height: 609px;
   font-size: 12px;
   padding: 40px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -700,10 +698,15 @@ header {
   font-size: 12px;
   letter-spacing: 0.01em;
   color: #757575;
-  width: 400px;
   margin-bottom: 4px;
   margin-top: 0px;
   text-align: left;
+}
+
+@media screen and (min-width: 400px) {
+  .modal-text {
+    width: 400px;
+  }
 }
 
 .modal-input-group {
@@ -1361,7 +1364,7 @@ header {
 .card-grid .product-thumb {
   position: relative;
   overflow: hidden;
-  height: 100%;
+  height: 294px;
 }
 
 .card-grid .card-overlay {
