--- a/sass/components/mainpage/_feedbackform.scss
+++ b/sass/components/mainpage/_feedbackform.scss
@@ -21,8 +21,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--white-color);
-  max-width: 450px;
-  min-height: 609px;
+  // max-width: 450px;
+  // min-height: 609px;
   font-size: 12px;
   padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -64,11 +64,13 @@
   font-size: 12px;
   letter-spacing: 0.01em;
   color: #757575;
-  width: 400px;
 
   margin-bottom: 4px;
   margin-top: 0px;
   text-align: left;
+  @media screen and (min-width: 400px) {
+    width: 400px;
+  }
 }
 
 .modal-input-group {
