--- a/css/main.css
+++ b/css/main.css
@@ -1364,7 +1364,7 @@ header {
 .card-grid .product-thumb {
   position: relative;
   overflow: hidden;
-  height: 294px;
+  height: 100%;
 }
 
 .card-grid .card-overlay {
