--- a/css/main.css
+++ b/css/main.css
@@ -649,7 +649,7 @@ header {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 @media screen and (min-width: 1201px) {
@@ -1417,7 +1417,7 @@ header {
   padding: 48px 40px;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: scroll;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   background-color: var(--white-color);
