--- a/sass/components/mainpage/_feedbackform.scss
+++ b/sass/components/mainpage/_feedbackform.scss
@@ -25,6 +25,7 @@
   // min-height: 609px;
   font-size: 12px;
   padding: 40px;
+  width: 100vw;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
