--- a/css/main.css
+++ b/css/main.css
@@ -646,11 +646,18 @@ header {
   background-color: var(--white-color);
   font-size: 12px;
   padding: 40px;
-  width: 100vw;
+  width: 90vw;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   overflow-y: scroll;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 480px;
+    overflow: hidden;
+  }
 }
 
 @media screen and (min-width: 1201px) {
