--- a/sass/components/mainpage/_feedbackform.scss
+++ b/sass/components/mainpage/_feedbackform.scss
@@ -30,7 +30,7 @@
   border-radius: 4px;
   overflow-y: scroll;
   @media screen and (max-width: 480px) {
-    height: 80vw;
+    height: 85vh;
   }
   @media screen and (min-width: 480px) {
     width: 450px;
